building out name endpoints
