# routes/movies/index.js
@@ -1,4 +1,6 @@
-import { getListAllMovies } from './get.js'
+import { getListAllMovies, getMoviebyName } from './get.js'
 import { createListOfMovies, createMovie } from './post.js'
+import { updateMovieByName } from './patch.js'
+import { deleteMovieByName } from './delete.js'
 
-export { createListOfMovies, getListAllMovies, createMovie }
+export { createListOfMovies, getListAllMovies, getMoviebyName, createMovie, updateMovieByName, deleteMovieByName }
